--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ header .logo{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 .top span{
     font-size:23vw;
